crates/escalier_parser/src/snapshots/escalier_parser__tests__if_else.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"if (true) { 5 } else { 10 };\")"
---
Ok(
    Program {
        body: [
            Expr {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 28,
                    },
                },
                span: 0..28,
                expr: Expr {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 27,
                        },
                    },
                    span: 0..27,
                    kind: IfElse(
                        IfElse {
                            cond: Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 4,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 8,
                                    },
                                },
                                span: 4..8,
                                kind: Lit(
                                    Bool(
                                        Bool {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 4,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 8,
                                                },
                                            },
                                            span: 4..8,
                                            value: true,
                                        },
                                    ),
                                ),
                                inferred_type: None,
                            },
                            consequent: Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 12,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 13,
                                    },
                                },
                                span: 12..13,
                                kind: Lit(
                                    Num(
                                        Num {
                                            loc: SourceLocation {
                                                start: Position {
                                                    line: 0,
                                                    column: 12,
                                                },
                                                end: Position {
                                                    line: 0,
                                                    column: 13,
                                                },
                                            },
                                            span: 12..13,
                                            value: "5",
                                        },
                                    ),
                                ),
                                inferred_type: None,
                            },
                            alternate: Some(
                                Expr {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 23,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 25,
                                        },
                                    },
                                    span: 23..25,
                                    kind: Lit(
                                        Num(
                                            Num {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 23,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 25,
                                                    },
                                                },
                                                span: 23..25,
                                                value: "10",
                                            },
                                        ),
                                    ),
                                    inferred_type: None,
                                },
                            ),
                        },
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
